<resources>
    <string name="app_name">MAD Project</string>
    <string name="Login_btn">Login</string>
    <string name="Email">Enter your email</string>
    <string name="Password">Enter your password</string>
    <string name="Login_text">Sign in</string>
    <string name="Pass_reset">Forget password?</string>
    <string name="handshake_image_content">HandShake Image</string>
    <string name="Register_btn">Register here</string>
    <string name="New_to_this">Are you new to this application?</string>
    <string name="Sign_in_btns">sign_in_btns</string>
    <string name="Sign_in">sign in with</string>
    <string name="Name">HI: your name</string>
    <string name="logout">Logout</string>
    <string name="Enter_Name">Enter your name</string>
    <string name="Enter_Password">Enter your password</string>
    <string name="Enter_phoneNum">Enter your phone number</string>
    <string name="retype_pass">Retype your password</string>
    <string name="registration_txt">Registration</string>
    <string name="search">Explore Jobs</string>
    <string name="no_desc">no_descriptiopn</string>
    <string name="view_profile">View profile</string>
    <string name="notification">Notifications</string>
    <string name="post_jobs">Post jobs</string>
    <string name="greating">Find your dream job here</string>
    <string name="userName">Name</string>
    <string name="userEmail">Email</string>
    <string name="userPhone">Phone</string>
    <string name="sample_name">Rasangi Nanayakkara</string>
    <string name="sampe_mail">rasangi12@gmail.com</string>
    <string name="sample_phone">0711223569</string>
    <string name="Edit">Edit Details</string>
    <string name="remove_acc">Remove account</string>
    <string name="bio">Bio</string>
    <string name="sample_bio">I\'m Jane Hong, and I recently graduated with an advanced diploma from Smith secondary school. I\'m seeking an internship where I can apply my skills in content creation and increase my experience in digital marketing</string>
    <string name="save">Save Changes</string>
    <string name="cancel">cancel changes</string>
    <string name="Enter_previous_pass">Enter your  current password</string>
    <string name="new_pass">Enter your new password</string>
    <string name="retype_new_pass">Re type your new password</string>
    <string name="editProfile">Edit</string>
    <string name="changePassword">Change Password</string>
    <string name="editDetails">Edit details</string>
    <string name="areYouSure">Are you sure that you want to delete your account?</string>
    <string name="yes">remove account</string>
    <string name="no">cancel</string>
    <string name="notifications">Notifications</string>
    <string name="Remove">Remove</string>
    <string name="sampleNote">Your request was recived to admin</string>
    <string name="logo">Logo</string>
    <string name="loading">Loading ...</string>
    <string name="back">Back</string>


    <string name="profileName">NAVEEN MALSHAN \n HR MANAGER\n  Got International (pvt) Ltd </string>
    <string name="noDesc">no description</string>
    <string name="btnCurrent">Current Vacancies</string>
    <string name="btnPost">Post Vacancies</string>
    <string name="ans">Answer</string>
    <string name="post">Post</string>
    <string name="closing_date_20_04_2023">Closing Date: 20/04/2023</string>
    <string name="job_ref_no_2030865">Job Ref No: 2030865</string>
    <string name="closing_date_11_04_2023">Closing Date: 11/04/2023</string>
    <string name="it_oparators_kelaniya">IT oparators,kelaniya \nRs 55,000 – 100,000</string>
    <string name="junior_executive_it">Junior Executive - IT</string>
    <string name="accounts_assistant_colombo_rs_35_000_80_000">Accounts Assistant,Colombo \nRs 35,000 – 80,000</string>
    <string name="job_ref_no_1065048">Job Ref No: 1065048</string>
    <string name="closing_date_31_03_2023">Closing Date: 31/03/2023</string>
    <string name="data_oparators_kelaniya_rs_55_000_100_000">Data oparators,kelaniya  \nRs 55,000 – 100,000</string>
    <string name="finance_executive_female">Finance Executive (Female)</string>
    <string name="job_ref_no_1085032">Job Ref No: 1085032</string>
    <string name="account_assist">Account Assistant (Male)</string>
    <string name="logo01">logo01</string>
    <string name="Update">Update Vacancy</string>
    <string name="update">Update</string>
    <string name="areyou">Are you sure that you want to delete this post?</string>
    <string name="del">Delete</string>
    <string name="delete">Delete Vacancy</string>
    <string name="companyName">Company Name</string>
    <string name="company">Company Name</string>
    <string name="desc">Description</string>
    <string name="loading_data">Loading Data.....</string>


    <string name="JobName">Job Name</string>
    <string name="JobDescription">Job Description</string>
    <string name="Benefit">Benefits</string>
    <string name="Company">Company Info</string>
    <string name="name">Job Name</string>
    <string name="description">Description</string>
    <string name="benefit">Benefits</string>
    <string name="info">Company Info</string>
    <string name="required">Required</string>
    <string name="benefits">Benefits</string>
    <string name="JobSalary">Salary</string>
    <string name="Salary">Job Salary</string>
    <string name="Software">Software Engineer</string>
    <string name="SESalary">$25 per hour</string>
    <string name="jobdes">Description</string>
    <string name="Job">Job Description</string>
    <string name="Companyinfo">Company Info</string>
    <string name="sedes">A minimum of 6 months to 1 year of hands-on industry experience is required. Solid experience with PHP,React js and Flutter is a strong advantage.</string>
    <string name="sedes2">"A degree or equivalent qualification in information technology. "</string>
    <string name="btnseupdate">Update</string>
    <string name="btnsedelete">Delete</string>
    <string name="Joblisting">Job Listings</string>
    <string name="se">Software Engineer</string>
    <string name="ui">UI/UX Designer</string>
    <string name="hr">HR Manager</string>
    <string name="webdev">Web Developer</string>
    <string name="uiux">UI/UX Designer</string>
    <string name="uiuxsalary">$15 per hour</string>
    <string name="uides">Job Description</string>
    <string name="uibenefit">Benefits</string>
    <string name="uicompany">Company Info</string>
    <string name="uidescription">A minimum of 6 months to 1 year of hands-on industry experience is required. Solid experience with Figma  is a strong advantage.</string>
    <string name="uidescription2">"A degree or equivalent qualification in information technology. "</string>
    <string name="uiuxtopic">UI/UX Designer</string>
    <string name="uisal">$15 per hour</string>
    <string name="uijobdes">Job Description</string>
    <string name="uibenefits">Benefits</string>
    <string name="search_hint">Search Jobs</string>


    <string name="jobcategory">Select Job Category</string>
    <string name="category1">HR/Training</string>
    <string name="category2">Digital Marketing</string>
    <string name="category3">Accounting/Finance/Auditing</string>
    <string name="category">Banking/Insuarance</string>
    <string name="category5">Nursing/Health Care</string>
    <string name="category6">Teaching/Academic/Library</string>
    <string name="category7"><![CDATA[Writing & Translation]]></string>
    <string name="deletejobcategory">Delete Job Category</string>
    <string name="category_name">Category Name</string>
    <string name="updatejobcategory">Update Job Category</string>
    <string name="createjobcategory">Create Job Category</string>
    <string name="create">CREATE</string>
    <string name="category0">Banking/Insuarance</string>
    <string name="job_category_list">Job Category List</string>
    <string name="agriculture_food_and_natural_resources">Agriculture,Food, and Natural Resources</string>
    <string name="add">Add category</string>
    <string name="adds">Add</string>
    <string name="delItem">Are you sure that you want to delete this item?</string>
    <string name="categoryIcon">Categories</string>
    <string name="edit_icon">edit icon</string>
    <string name="delete_icon">delete icon</string>
    <string name="emp_name">Emp Name</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_content">Notification Content</string>

</resources>
