<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:addStatesFromChildren="false"
    android:background="@drawable/background1"
    tools:context=".activities.UserRegistration">


    <EditText
        android:id="@+id/userRegName"
        android:layout_width="@dimen/FormInputField_Width"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/custom_field"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/Enter_Name"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="@dimen/FormInputField_Width"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_field"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/retype_pass"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword"
        app:passwordToggleEnabled = "true"
        />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="@dimen/FormInputField_Width"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_field"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/Enter_Password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRegPhone"
        app:passwordToggleEnabled="true" />

    <EditText
        android:id="@+id/userRegPhone"
        android:layout_width="@dimen/FormInputField_Width"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_field"
        android:drawableStart="@drawable/baseline_local_phone_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/Enter_phoneNum"
        android:padding="15dp"
        android:inputType="phone|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRegMail" />

    <EditText
        android:id="@+id/userRegMail"
        android:layout_width="@dimen/FormInputField_Width"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_field"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRegName" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="@dimen/register_btn"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginTop="50dp"
        android:text="@string/Register_btn"
        android:textSize="@dimen/reg_btn_size"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/registration_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/heading"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>