<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".activities.EditProfileDetails"
    tools:layout_editor_absoluteX="15dp"
    tools:layout_editor_absoluteY="302dp">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/editDetails"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userEditName"
        android:layout_width="@dimen/FormInputField_Width"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_field"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/Enter_Name"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/userEditPhone"
        android:layout_width="@dimen/FormInputField_Width"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_field"
        android:drawableStart="@drawable/baseline_local_phone_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/Enter_phoneNum"
        android:inputType="phone"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEditName" />

    <EditText
        android:id="@+id/userEditMail"
        android:layout_width="@dimen/FormInputField_Width"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no Auto fill"
        android:background="@drawable/custom_field"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEditPhone" />

    <EditText
        android:id="@+id/userEdtBio"
        android:layout_width="@dimen/FormInputField_Width"
        android:layout_height="@dimen/textFieldHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_field"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="12"
        android:maxLines="12"
        android:padding="@dimen/bio_edit_padding"
        android:scrollbars="vertical"
        android:text="@string/sample_bio"
        android:textSize="@dimen/reg_btn_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEditMail"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/saveChangesBtn"
        android:layout_width="@dimen/cancelBtn"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_field"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/reg_btn_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEdtBio" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelChanges"
        android:layout_width="@dimen/cancelBtn"
        android:layout_height="@dimen/FormInputField_Height"
        android:layout_marginTop="20dp"
        android:background="@drawable/btndelete"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="@dimen/reg_btn_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveChangesBtn"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>