<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".activities.RemoveAccount">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/areYouSure"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/Login_fontSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rmvBtn"
        android:layout_width="@dimen/login_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/btndelete"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/reg_btn_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/cnslBtn"
        android:layout_width="@dimen/login_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_field"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="@dimen/reg_btn_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rmvBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>